# submitqueue

./: .bazelignore  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  Makefile  README.md  go.mod  go.sum
.github/: CODEOWNERS
.github/workflows/: build_and_test.yml
api/runway/messagequeue/: BUILD.bazel
api/runway/protopb/: BUILD.bazel
api/stovepipe/protopb/: BUILD.bazel
core/consumer/: BUILD.bazel
core/errs/: BUILD.bazel
core/errs/generic/: BUILD.bazel
core/errs/mysql/: BUILD.bazel
core/httpclient/: BUILD.bazel
core/metrics/: BUILD.bazel
core/speculation/: BUILD.bazel  exhaustive.go  exhaustive_test.go  topk_strategy.go  topk_strategy_test.go  topk_test.go
doc/howto/: DEVELOPMENT.md
doc/rfc/: index.md  sql-queue-rfc.md
entity/: BUILD.bazel  queue_target.go
entity/messagequeue/: BUILD.bazel
example/: README.md
example/runway/orchestrator/server/: BUILD.bazel  Dockerfile  docker-compose.yml  main.go
example/server/orchestrator/: main.go
example/stovepipe/: docker-compose.yml
example/stovepipe/gateway/server/: BUILD.bazel
example/submitqueue/orchestrator/server/: BUILD.bazel  main.go
extension/: BUILD.bazel
extension/changeprovider/github/: config.go  config_test.go  graphql_test.go  provider_test.go  validate_test.go
extension/counter/: BUILD.bazel
extension/counter/mock/: BUILD.bazel
extension/counter/mysql/: BUILD.bazel
extension/messagequeue/: BUILD.bazel
extension/messagequeue/mock/: BUILD.bazel
extension/messagequeue/mysql/: BUILD.bazel
extension/queue/mysql/: BUILD.bazel  README.md  delivery_state_store.go  delivery_state_store_test.go  message_store.go  message_store_test.go  offset_store.go  offset_store_test.go  partition_lease_store.go  partition_lease_store_test.go  stores.go  subscriber.go  subscriber_test.go
extension/scorer/: BUILD.bazel  scorer.go
extension/scorer/composite/: BUILD.bazel  scorer.go  scorer_test.go
extension/scorer/heuristic/: BUILD.bazel  scorer.go  scorer_test.go
extension/scorer/mock/: BUILD.bazel
gateway/controller/: BUILD.bazel  land.go
gateway/core/controller/: BUILD.bazel  ping_test.go
gateway/integration_tests/: BUILD.bazel  ping_test.go
gateway/proto/: BUILD.bazel
gateway/protopb/: BUILD.bazel  gateway.pb.go  gateway_grpc.pb.go
integration_tests/: BUILD.bazel  README.md  api_test.go
orchestrator/controller/batch/: BUILD.bazel  batch_test.go
orchestrator/core/controller/: BUILD.bazel  ping_test.go
orchestrator/integration_tests/: BUILD.bazel  ping_test.go
orchestrator/proto/: BUILD.bazel
orchestrator/protopb/: BUILD.bazel
platform/base/: BUILD.bazel
platform/base/change/: BUILD.bazel
platform/base/change/changeutil/: BUILD.bazel
platform/base/change/git/: BUILD.bazel
platform/base/change/github/: BUILD.bazel
platform/base/change/phabricator/: BUILD.bazel
platform/base/mergestrategy/: BUILD.bazel
platform/base/messagequeue/: BUILD.bazel
platform/base/page/: BUILD.bazel
platform/consumer/: BUILD.bazel
platform/consumer/mock/: BUILD.bazel
platform/errs/: BUILD.bazel
platform/errs/generic/: BUILD.bazel
platform/errs/mysql/: BUILD.bazel
platform/extension/: BUILD.bazel
platform/extension/counter/: BUILD.bazel
platform/extension/counter/mock/: BUILD.bazel
platform/extension/counter/mysql/: BUILD.bazel
platform/extension/messagequeue/: BUILD.bazel
platform/extension/messagequeue/mock/: BUILD.bazel
platform/extension/messagequeue/mysql/: BUILD.bazel
platform/extension/messagequeue/mysql/ctl/lib/: BUILD.bazel
platform/http/: BUILD.bazel
platform/metrics/: BUILD.bazel
pushqueue/entity/: land.go
pushqueue/extension/landqueue/: BUILD.bazel  landqueue.go
pushqueue/extension/vcs/: BUILD.bazel  vcs.go
pushqueue/gateway/controller/: BUILD.bazel  land.go  land_test.go  ping.go  ping_test.go
pushqueue/gateway/proto/: BUILD.bazel
pushqueue/gateway/protopb/: gateway.pb.go  (+1 more)
runway/controller/: BUILD.bazel
runway/core/: BUILD.bazel  core.go
runway/entity/: BUILD.bazel  check.go  check_test.go  entity.go  job.go  job_test.go
runway/extension/: BUILD.bazel
runway/extension/merger/: BUILD.bazel
runway/extension/merger/mock/: BUILD.bazel
runway/extension/merger/noop/: BUILD.bazel
runway/extension/vcs/: BUILD.bazel  vcs.go
runway/extension/vcs/mock/: BUILD.bazel  vcs_mock.go
runway/extension/vcs/noop/: BUILD.bazel  noop.go  noop_test.go
runway/orchestrator/controller/merge/: BUILD.bazel  merge.go  merge_test.go
speculator/core/controller/: BUILD.bazel  ping_test.go
speculator/integration_tests/: BUILD.bazel  ping_test.go
speculator/proto/: BUILD.bazel
speculator/protopb/: BUILD.bazel
stovepipe/controller/: BUILD.bazel
stovepipe/controller/process/: BUILD.bazel
stovepipe/core/: BUILD.bazel
stovepipe/entity/: BUILD.bazel
stovepipe/extension/: BUILD.bazel
submitqueue/core/: BUILD.bazel
submitqueue/core/consumer/: BUILD.bazel
submitqueue/core/consumer/mock/: BUILD.bazel
submitqueue/core/request/: BUILD.bazel
submitqueue/core/topickey/: BUILD.bazel
submitqueue/entity/: BUILD.bazel
submitqueue/extension/buildrunner/: BUILD.bazel
submitqueue/extension/buildrunner/buildkite/: BUILD.bazel
submitqueue/extension/buildrunner/fake/: BUILD.bazel
submitqueue/extension/buildrunner/githubactions/: BUILD.bazel
submitqueue/extension/buildrunner/mock/: BUILD.bazel
submitqueue/extension/pusher/: BUILD.bazel  pusher.go
submitqueue/extension/pusher/fake/: BUILD.bazel
submitqueue/extension/pusher/git/: BUILD.bazel  git_pusher.go  git_pusher_test.go
submitqueue/extension/pusher/mock/: BUILD.bazel  pusher_mock.go
submitqueue/extension/scorer/: BUILD.bazel
submitqueue/extension/scorer/composite/: BUILD.bazel
submitqueue/extension/scorer/fake/: BUILD.bazel
submitqueue/extension/scorer/heuristic/: BUILD.bazel
submitqueue/extension/scorer/mock/: BUILD.bazel
submitqueue/gateway/controller/: BUILD.bazel  list.go  list_test.go
submitqueue/gateway/controller/log/: BUILD.bazel
test/e2e/submitqueue/: BUILD.bazel
test/testutil/: BUILD.bazel  compose.go
tool/: protoc
(+133 files in other folders)
