load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "base",
    srcs = ["base.go"],
    importpath = "github.com/uber/submitqueue/platform/base",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":base",
    visibility = ["//visibility:public"],
)
