load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "extension",
    srcs = ["extension.go"],
    importpath = "github.com/uber/submitqueue/runway/extension",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":extension",
    visibility = ["//visibility:public"],
)
