load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["mysql.go"],
    importpath = "github.com/uber/submitqueue/core/errs/mysql",
    visibility = ["//visibility:public"],
    deps = [
        "//core/errs:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mysql_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//core/errs:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
