load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "delivery_mock.go",
        "publisher_mock.go",
        "queue_mock.go",
        "subscriber_mock.go",
    ],
    importpath = "github.com/uber/submitqueue/extension/messagequeue/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//entity/messagequeue:go_default_library",
        "//extension/messagequeue:go_default_library",
        "@org_uber_go_mock//gomock:go_default_library",
    ],
)
