load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "heuristic",
    srcs = ["scorer.go"],
    importpath = "github.com/uber/submitqueue/extension/scorer/heuristic",
    visibility = ["//visibility:public"],
    deps = ["//extension/scorer"],
)

go_test(
    name = "heuristic_test",
    srcs = ["scorer_test.go"],
    embed = [":heuristic"],
    deps = [
        "//extension/scorer",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
