load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controller",
    srcs = ["ping.go"],
    importpath = "github.com/uber/submitqueue/gateway/core/controller",
    visibility = ["//visibility:public"],
    deps = ["//gateway/protopb"],
)

go_test(
    name = "controller_test",
    srcs = ["ping_test.go"],
    embed = [":controller"],
    deps = ["//gateway/protopb"],
)
