load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "change",
    srcs = ["change.go"],
    importpath = "github.com/uber/submitqueue/platform/base/change",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":change",
    visibility = ["//visibility:public"],
)
