load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "page",
    srcs = ["page.go"],
    importpath = "github.com/uber/submitqueue/platform/base/page",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":page",
    visibility = ["//visibility:public"],
)
