load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controller",
    srcs = [
        "land.go",
        "ping.go",
    ],
    importpath = "github.com/uber/submitqueue/pushqueue/gateway/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//core/errs",
        "//core/metrics",
        "//entity",
        "//pushqueue/entity",
        "//pushqueue/extension/landqueue",
        "//pushqueue/extension/vcs",
        "//pushqueue/gateway/protopb",
        "@com_github_uber_go_tally_v4//:tally",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "controller_test",
    srcs = [
        "land_test.go",
        "ping_test.go",
    ],
    embed = [":controller"],
    deps = [
        "//core/errs",
        "//entity",
        "//pushqueue/entity",
        "//pushqueue/extension/landqueue/mock",
        "//pushqueue/extension/vcs",
        "//pushqueue/extension/vcs/mock",
        "//pushqueue/gateway/protopb",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_uber_go_tally_v4//:tally",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zaptest",
    ],
)
