load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "consumer.go",
        "controller.go",
        "registry.go",
    ],
    importpath = "github.com/uber/submitqueue/submitqueue/core/consumer",
    visibility = ["//visibility:public"],
    deps = [
        "//core/errs:go_default_library",
        "//core/metrics:go_default_library",
        "//entity/messagequeue:go_default_library",
        "//extension/messagequeue:go_default_library",
        "@com_github_uber_go_tally//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "consumer_test.go",
        "registry_test.go",
    ],
    deps = [
        ":go_default_library",
        "//core/errs:go_default_library",
        "//entity/messagequeue:go_default_library",
        "//extension/messagequeue:go_default_library",
        "//extension/messagequeue/mock:go_default_library",
        "//submitqueue/core/consumer/mock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_uber_go_tally//:go_default_library",
        "@org_uber_go_mock//gomock:go_default_library",
        "@org_uber_go_zap//zaptest:go_default_library",
    ],
)
