load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "log.go",
        "request.go",
    ],
    importpath = "github.com/uber/submitqueue/submitqueue/core/request",
    visibility = ["//visibility:public"],
    deps = [
        "//entity/messagequeue:go_default_library",
        "//submitqueue/core/consumer:go_default_library",
        "//submitqueue/entity:go_default_library",
        "//submitqueue/extension/storage:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "log_test.go",
        "request_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//entity/messagequeue:go_default_library",
        "//extension/messagequeue/mock:go_default_library",
        "//submitqueue/core/consumer:go_default_library",
        "//submitqueue/entity:go_default_library",
        "//submitqueue/extension/storage:go_default_library",
        "//submitqueue/extension/storage/mock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_mock//gomock:go_default_library",
    ],
)
