load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "topickey",
    srcs = ["topickey.go"],
    importpath = "github.com/uber/submitqueue/submitqueue/core/topickey",
    visibility = ["//visibility:public"],
    deps = ["//platform/consumer"],
)

alias(
    name = "go_default_library",
    actual = ":topickey",
    visibility = ["//visibility:public"],
)
