load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["build_runner.go"],
    importpath = "github.com/uber/submitqueue/submitqueue/extension/buildrunner",
    visibility = ["//visibility:public"],
    deps = ["//submitqueue/entity:go_default_library"],
)
