load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "pusher",
    srcs = ["pusher.go"],
    importpath = "github.com/uber/submitqueue/submitqueue/extension/pusher",
    visibility = ["//visibility:public"],
    deps = ["//submitqueue/entity"],
)

alias(
    name = "go_default_library",
    actual = ":pusher",
    visibility = ["//visibility:public"],
)
