load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "scorer",
    srcs = ["scorer.go"],
    importpath = "github.com/uber/submitqueue/submitqueue/extension/scorer",
    visibility = ["//visibility:public"],
    deps = ["//submitqueue/entity"],
)

alias(
    name = "go_default_library",
    actual = ":scorer",
    visibility = ["//visibility:public"],
)
