load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cancel.go",
        "land.go",
        "ping.go",
        "status.go",
    ],
    importpath = "github.com/uber/submitqueue/submitqueue/gateway/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//core/errs:go_default_library",
        "//core/metrics:go_default_library",
        "//entity/messagequeue:go_default_library",
        "//extension/counter:go_default_library",
        "//submitqueue/core/consumer:go_default_library",
        "//submitqueue/core/request:go_default_library",
        "//submitqueue/entity:go_default_library",
        "//submitqueue/extension/queueconfig:go_default_library",
        "//submitqueue/extension/storage:go_default_library",
        "//submitqueue/gateway/protopb:go_default_library",
        "@com_github_uber_go_tally//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cancel_test.go",
        "land_test.go",
        "ping_test.go",
        "status_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//core/errs:go_default_library",
        "//entity/messagequeue:go_default_library",
        "//extension/counter/mock:go_default_library",
        "//extension/messagequeue/mock:go_default_library",
        "//submitqueue/core/consumer:go_default_library",
        "//submitqueue/entity:go_default_library",
        "//submitqueue/extension/queueconfig:go_default_library",
        "//submitqueue/extension/queueconfig/mock:go_default_library",
        "//submitqueue/extension/storage:go_default_library",
        "//submitqueue/extension/storage/mock:go_default_library",
        "//submitqueue/gateway/protopb:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_uber_go_tally//:go_default_library",
        "@org_uber_go_mock//gomock:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
