load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["suite_test.go"],
    deps = [
        "//submitqueue/entity:go_default_library",
        "//submitqueue/gateway/protopb:go_default_library",
        "//submitqueue/orchestrator/protopb:go_default_library",
        "//test/testutil:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
