load("@rules_go//go:def.bzl", "go_binary", "go_library")

exports_files(
    ["docker-compose.yml"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "gateway_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/uber/submitqueue/example/stovepipe/gateway/server",
    visibility = ["//visibility:private"],
    deps = [
        "//stovepipe/gateway/controller:go_default_library",
        "//stovepipe/gateway/protopb:go_default_library",
        "@com_github_uber_go_tally//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "gateway",
    embed = [":gateway_server_lib"],
    visibility = ["//visibility:public"],
)
