load("@rules_go//go:def.bzl", "go_binary", "go_library")

exports_files(
    ["docker-compose.yml"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "orchestrator_lib",
    srcs = ["main.go"],
    importpath = "github.com/uber/submitqueue/example/submitqueue/orchestrator/server",
    visibility = ["//visibility:private"],
    deps = [
        "//core/errs:go_default_library",
        "//core/errs/generic:go_default_library",
        "//core/errs/mysql:go_default_library",
        "//core/httpclient:go_default_library",
        "//extension/counter:go_default_library",
        "//extension/counter/mysql:go_default_library",
        "//extension/messagequeue:go_default_library",
        "//extension/messagequeue/mysql:go_default_library",
        "//submitqueue/core/consumer:go_default_library",
        "//submitqueue/entity:go_default_library",
        "//submitqueue/extension/buildrunner:go_default_library",
        "//submitqueue/extension/buildrunner/fake:go_default_library",
        "//submitqueue/extension/changeprovider:go_default_library",
        "//submitqueue/extension/changeprovider/fake:go_default_library",
        "//submitqueue/extension/changeprovider/github:go_default_library",
        "//submitqueue/extension/conflict:go_default_library",
        "//submitqueue/extension/conflict/all:go_default_library",
        "//submitqueue/extension/conflict/fake:go_default_library",
        "//submitqueue/extension/conflict/none:go_default_library",
        "//submitqueue/extension/mergechecker:go_default_library",
        "//submitqueue/extension/mergechecker/fake:go_default_library",
        "//submitqueue/extension/mergechecker/github:go_default_library",
        "//submitqueue/extension/pusher:go_default_library",
        "//submitqueue/extension/pusher/fake:go_default_library",
        "//submitqueue/extension/pusher/git:go_default_library",
        "//submitqueue/extension/scorer:go_default_library",
        "//submitqueue/extension/scorer/composite:go_default_library",
        "//submitqueue/extension/scorer/fake:go_default_library",
        "//submitqueue/extension/scorer/heuristic:go_default_library",
        "//submitqueue/extension/storage:go_default_library",
        "//submitqueue/extension/storage/mysql:go_default_library",
        "//submitqueue/orchestrator/controller:go_default_library",
        "//submitqueue/orchestrator/controller/batch:go_default_library",
        "//submitqueue/orchestrator/controller/build:go_default_library",
        "//submitqueue/orchestrator/controller/buildsignal:go_default_library",
        "//submitqueue/orchestrator/controller/cancel:go_default_library",
        "//submitqueue/orchestrator/controller/conclude:go_default_library",
        "//submitqueue/orchestrator/controller/dlq:go_default_library",
        "//submitqueue/orchestrator/controller/merge:go_default_library",
        "//submitqueue/orchestrator/controller/score:go_default_library",
        "//submitqueue/orchestrator/controller/speculate:go_default_library",
        "//submitqueue/orchestrator/controller/start:go_default_library",
        "//submitqueue/orchestrator/controller/validate:go_default_library",
        "//submitqueue/orchestrator/protopb:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_uber_go_tally//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "orchestrator",
    embed = [":orchestrator_lib"],
    visibility = ["//visibility:public"],
)
