load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "merge",
    srcs = ["merge.go"],
    importpath = "github.com/uber/submitqueue/runway/orchestrator/controller/merge",
    visibility = ["//visibility:public"],
    deps = [
        "//platform/base/messagequeue",
        "//platform/consumer",
        "//platform/metrics",
        "//runway/core/topickey",
        "//runway/entity",
        "//runway/extension/vcs",
        "@com_github_uber_go_tally//:tally",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "merge_test",
    srcs = ["merge_test.go"],
    embed = [":merge"],
    deps = [
        "//platform/base/change",
        "//platform/base/mergestrategy",
        "//platform/base/messagequeue",
        "//platform/consumer",
        "//platform/extension/messagequeue/mock",
        "//runway/core/topickey",
        "//runway/entity",
        "//runway/extension/vcs",
        "//runway/extension/vcs/mock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_uber_go_tally//:tally",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//zaptest",
    ],
)
